# alterlinux

./: .config.old  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .shellcheckrc  .travis.yml  ARCH.modules  AUTHORS.rst  AlterISO-4.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  Howtobuild_on_docker.md  MEDIA_GUIDELINE.md  Makefile  Makefile.old  README  README.md  README.old  README.profile.rst  README.rst  README_archiso.rst  README_jp.md  SECURITY.md  TODO  add-key.sh  addon_config  allarch.sh  archiso-mkinitcpio.conf  archiso_install  archlive_hook  archlive_install  base.packages  build.sh  calamares-test  clean.sh  config  default.conf  docker-build.sh  (+23 more)
.github/: FUNDING.yml
archiso/: Makefile  archiso_pxe_nbd  archiso_shutdown  aur.sh  gen_grubscan  get_profile_def.sh  json_template.json  mkalteriso  mkarchiso  mkusbimg  testiso
archiso2dual/: Makefile  README  archiso2dual  isolinux.cfg  isomounts  isomounts.i686  isomounts.x86_64  isomounts.x86_64-i686  removefiles.lst  syslinux.cfg  syslinux_32only.cfg  syslinux_arch32.cfg  syslinux_arch64.cfg  syslinux_head.cfg  syslinux_tail.cfg
channels/: README.md
default-config/: screen-256color-bce.src
doc/: README_jp.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.altbootmethods  README.bootparams  README.build  README.ja.md  README.knowissues  README.knownissues  README.md  README.transfer  (+9 more)
menuconfig/: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  conf.c  confdata.c  mconf.c  util.c  zconf.hash.c  zconf.lex.c  zconf.tab.c
menuconfig/lxdialog/: CMakeLists.txt
menuconfig/test/: rootconf  subconfig  subconfig2
system/cpp-src/mkalteriso/: CMakeLists.txt  README.md  build_setting.cpp  build_setting.h  command_collection.cpp  command_collection.h  cuirunner_mkalteriso.h  custom_system_exec.cpp  custom_system_exec.h  main.cpp  main.h  qstringls_to_str.cpp  qstringls_to_str.h
(+2290 files in other folders)
